# AutoBuildr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agent.py  app_spec.txt  autonomous_agent_demo.py  claude-progress.txt  client.py  create_dependency_features.py  create_features.py  init.sh  parallel_orchestrator.py  prompts.py  registry.py  requirements.txt  security.py  start_ui.bat  start_ui.py  start_ui.sh  test_security.py
.autobuildr/: .gitkeep  allowed_commands.yaml
.autocoder/: allowed_commands.yaml
api/: __init__.py  agent_materializer.py  agentspec_crud.py  agentspec_models.py  archetypes.py  artifact_storage.py  cli_spec_builder.py  constraints.py  database.py  dependency_resolver.py  display_derivation.py  dspy_signatures.py  error_recovery.py  event_recorder.py  event_replay.py  executor_config.py  feature_compiler.py  harness_kernel.py  icon_provider.py  icon_provider_config.py  icon_storage.py  local_placeholder_icon_provider.py  (+34 more)
docker/test-project/repo-concierge/: .gitignore  README.md  init.sh  pyproject.toml  test_cli_defaults.py
docker/test-project/repo-concierge/.autobuildr/: allowed_commands.yaml
docker/test-project/repo-concierge/config/: command_allowlist.yaml
docker/test-project/repo-concierge/repo_concierge/: __init__.py  __main__.py  cli.py  config.py  models.py  reporting.py  rules.py  scanner.py
docker/test-project/repo-concierge/tests/: test_config.py  test_rules.py  test_scanner.py
docker/test-project/repo-concierge/tests/fixtures/: clean_file.py  risky_script.sh  safe_script.sh  sample_secrets.txt
(+436 files in other folders)
